allows multiple CORS incoming addresses

--- a/.env.example
+++ b/.env.example
@@ -12,8 +12,8 @@ JWT_EXPIRES_IN=1h
 JWT_REFRESH_SECRET=your-super-secret-refresh-key-change-this-in-production
 JWT_REFRESH_EXPIRES_IN=7d
 
-# CORS
-CORS_ORIGIN=http://localhost:5173
+# CORS (comma-separated for multiple origins)
+CORS_ORIGIN=http://localhost:5173,http://localhost:3000
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
