--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,7 @@
   "rules": {
     "@typescript-eslint/no-explicit-any": "warn",
     "@typescript-eslint/explicit-module-boundary-types": "off",
-    "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
+    "@typescript-eslint/no-unused-vars": "off",
     "no-console": ["warn", { "allow": ["warn", "error"] }]
   }
 }
