--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
+    "manualdev": "PORT=4000;tsx watch src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "db:seed": "tsx src/db/seed.ts",
@@ -31,6 +32,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^7.4.1",
+    "graphile-worker": "^0.16.6",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
