--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start:worker": "tsx src/worker/index.ts",
     "dev:worker": "tsx watch src/worker/index.ts",
     "db:seed": "tsx src/db/seed.ts",
+    "db:setup-worker": "tsx src/scripts/setup-worker-schema.ts",
     "test": "vitest run",
+    "test-all": "npm test -- --run src/tests/agent.*.test.ts",
     "test:watch": "vitest",
     "lint": "eslint src --ext .ts",
     "format": "prettier --write \"src/**/*.ts\"",
@@ -28,6 +30,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.71.2",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
